--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "templates",
+  "homepage": "https://marcellintacite.github.io/TingPage",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -74,5 +75,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
