--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
+    "react-ga": "^3.3.1",
     "react-loader-spinner": "^5.1.7-beta.1",
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
