--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "html-to-image": "^1.10.8",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "lottie-react": "^2.3.1",
     "moment": "^2.29.2",
     "react": "^18.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
     "react-ga": "^3.3.1",
     "react-loader-spinner": "^5.1.7-beta.1",
+    "react-lottie": "^1.2.3",
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
