--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
     "react-ga": "^3.3.1",
+    "react-helmet-async": "^1.3.0",
     "react-loader-spinner": "^5.1.7-beta.1",
     "react-lottie": "^1.2.3",
     "react-pdf": "^5.7.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
