--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-spinners": "^0.13.3",
     "react-to-print": "^2.14.7",
     "react-toastify": "^8.2.0",
+    "reactjs-popup": "^2.0.5",
+    "redocx": "^1.1.4",
     "styled-components": "^5.3.5",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
